# xTron.mKP16

./: CMakeLists.txt  README  RIGHTS  bshrc.example  configure.pl
src/general/: CMakeLists.txt
src/general/debug/: Makefile  input.in  main.cpp
src/general/include/: excep.h  filerw.h  globalinfor.h  histdataman.h  integraljobs.h  libgen.h  localmemscr.h  omp_setting.h  parameterparsing.h  scalablevec.h  textread.h  xcfunc.h
src/general/src/: excep.cpp  filerw.cpp  globalinfor.cpp  histdataman.cpp  integraljobs.cpp  localmemscr.cpp  parameterparsing.cpp  textread.cpp  xcfunc.cpp
src/gints/: CMakeLists.txt
src/gints/debug/: gints2d_test.cpp  gints4d_test.cpp  gints4deriv_test.cpp  integralinfor_test.cpp  main.cpp  shellpair_test.cpp
src/gints/debug/gints2d/: core.txt  core2.txt  dna.in  input.in  ki.txt  ki2.txt  nai.txt  nai2.txt  ov.txt  ov2.txt
src/gints/debug/gints4d/: d1.txt  d2.txt  d3.txt  d4.txt  d5.txt  d6.txt  input.in  j1.txt  j2.txt  j3.txt  j4.txt  j5.txt  j6.txt  k1.txt  k2.txt  k3.txt  k4.txt  k5.txt  k6.txt
src/gints/debug/gints4deriv/: d1.txt  d2.txt  d3.txt  d4.txt  d5.txt  d6.txt  d7.txt  input.in  j1g.txt  j1h.txt  j2g.txt  j2h.txt  j3g.txt  j3h.txt  j4g.txt  j4h.txt  j5g.txt  j5h.txt  j6g.txt  j6h.txt  j7g.txt  j7h.txt  k1g.txt  k1h.txt  k2g.txt  k2h.txt  k3g.txt  k3h.txt  k4g.txt  k4h.txt  k5g.txt  k5h.txt  k6g.txt  k6h.txt  k7g.txt  k7h.txt
src/gints/debug/shellpair/: input.in
src/gints/include/: atomfockmtrx.h  constants.h  denmtrxinfor.h  digestutil.h  gints2d.h  gints4d.h  gints4deriv.h  gintsinfor.h  hgp_os_ints.h  integralinfor.h  oneemtrx.h  oneintformula.h  shellpair.h  sigshellpairinfor.h  symmjkdigest.h
src/gints/src/: atomfockmtrx.cpp  denmtrxinfor.cpp  digestutil.cpp  gints2d.cpp  gints4d.cpp  gints4deriv.cpp  gintsinfor.cpp  integralinfor.cpp  oneemtrx.cpp  oneintformula.cpp  shellpair.cpp  sigshellpairinfor.cpp  symmjkdigest.cpp
src/math/: CMakeLists.txt
src/math/debug/: Makefile  blas_test.cpp  blockmatrix_test.cpp  blockmatrixlist_test.cpp  lapack_test.cpp  main.cpp  matrix_test.cpp  para_blas_test.cpp  para_lapack_test.cpp  para_matrix_test.cpp  test_util.cpp
src/math/debug/lib_choice/: intel.mk  netlib.mk
src/math/include/: blas.h  blas1.h  blockmatrix.h  blockmatrixlist.h  functions.h  generalblas.h  generallapack.h  inplacetranspose.h  lapack.h  matrix.h
src/math/src/: blas.cpp  blas1.cpp  blockmatrix.cpp  blockmatrixlist.cpp  in_place_transpose.f  lapack.cpp  matrix.cpp
src/result/: CMakeLists.txt
src/result/debug/: Makefile  Makefile_eri  Makefile_esp  Makefile_kinetic  Makefile_nai  Makefile_twobodyoverlap  atomdenmtrx_test.cpp  compile.cfg  coreguess_test.cpp  main.cpp
src/result/debug/atomdenmtrx/: input.in
src/result/debug/core/: denmtrx1.txt  denmtrx2_a.txt  denmtrx2_b.txt  input.in
src/result/include/: atomdenmtrx.h  denmtrx.h  fracspininfor.h  mo.h  spinmatrix.h
src/result/src/: atomdenmtrx.cpp  denmtrx.cpp  denmtrx2.cpp  fracspininfor.cpp  mo.cpp
src/scf/: CMakeLists.txt
src/scf/debug/big_mol_examples/: LiF_Janesko.in
src/scf/debug/scf_test/: README  gamess_B3LYP_6-31Gss.txt  gamess_B3LYP_aug-cc-pvtz.txt  gamess_B3LYP_g3large.txt  gamess_hf_6-31Gss.txt  gamess_hf_aug-cc-pvtz.txt  gamess_hf_g3large.txt  rungamesstest.pl  runtest.pl  special_cases.txt
src/scf/debug/special_dft_func_test/: README  gendata.pl  runtest.pl
src/scf/include/: diiscontroller.h  fock.h  gdm.h  gslscfminimizer.h  scf.h  scfconv.h  scfconvsol.h  scfdiis.h  scfeadiis.h  scfenergyconv.h  scfintscontroller.h  scfmacro.h  scfparam.h  wfn.h
src/scf/src/: diiscontroller.cpp  fock.cpp  gslscfminimizer.cpp  scf.cpp  scfconv.cpp  scfconvsol.cpp  scfdiis.cpp  scfeadiis.cpp  scfenergyconv.cpp  scfintscontroller.cpp  scfmacro.cpp  scfparam.cpp  wfn.cpp
src/shell/: CMakeLists.txt
src/shell/debug/: Makefile  cptrans_para_test.cpp  cptrans_test.cpp  main.cpp
src/shell/debug/cptrans_test/: cart.txt  cart2.txt  den_cart.txt  den_pure.txt  dna.in  input.in  pure.txt
src/shell/debug/shell_test/: input.in
src/shell/include/: angmomlist.h  basissetnames.h  cptrans.h  parseshell.h  shell.h  shellprop.h  shellsize.h
src/shell/src/: basissetnames.cpp  cptrans.cpp  parseshell.cpp  purecart.cpp  shell.cpp  shellprop.cpp  shellsize.cpp
src/shell/util/: basisSetOrderGen.pl
src/shell/util/pure_cart/: README  angmomlist.h  functions.h  general.h  test.cpp
src/shell/util/shell_pair_order/: README  libgen.h  shellprop.h  test.cpp
src/xcfunc/: CMakeLists.txt  readme
src/xcfunc/include/: fderiv1.inc  fderiv2.inc  fderiv3.inc  functionallist.h  varlist.inc
src/xcfunc/src/: b13coor.f  b13strong_ac.f  beck_rsc.f  becke05ex.f  becke88.f  br89Xhole_s.f  br89exhole.f  br89x.f  br94coor.f  czeta.f  find_diff_check_deriv1.f  glpbe.f  hirao00Xhole_s.f  initfuncderives.f  kp14ec.f  kp14exc.f  lambda_pbe.f  lyp.f  pbec.f  pbecp.f  pbex.f  psts.f  pw86c.f  pw86x.f  pw91c.f  pw91x.f  pw92c.f  s.f  scan.f  tao16Xhole_s.f  tao17Xhole_s.f  tpssc.f  tpssx.f  tpssx_pw.f  vdwbr89.f  vwn1rpa.f  vwn5.f  wt.f
src/xcfunc/util/: fderiv.py
src/xcints/: CMakeLists.txt
src/xcints/debug/: espints_test.cpp  exrho_test.cpp  main.cpp  xcmtrx_test.cpp
src/xcints/debug/espints/: input.in
src/xcints/debug/exrho/: input.in  (+3 more)
src/xcints/include/: atomgrids.h  batchbasis.h  batchfunc.h  batchgrid.h  batchjkmtrx.h  batchvar.h  batchxcmtrx.h  dftderivinfor.h  dftmatrix.h  espints.h  gridinfor.h  halfjkrho.h  hirshfeld.h  molegrids.h  oddelec.h  sigatombasis.h  sphereint.h  xcenergyinfor.h  xcints.h  xcintsinfor.h  xcintsprops.h  xcvar.h  xcvarinfor.h
src/xcints/src/: atomgrids.cpp  batchbasis.cpp  batchfunc.cpp  batchgrid.cpp  batchjkmtrx.cpp  batchvar.cpp  batchxcmtrx.cpp  coefCalculator.cpp  dftbasisderiv1.cpp  dftbasisderiv2.cpp  dftbasisderiv3.cpp  dftbasisderiv4.cpp  dftmatrix.cpp  espints.cpp  gaussian.cpp  halfjkrho.cpp  hfxhole.cpp  hirshfeld.cpp  integralF.cpp  lebedev.f  molegrids.cpp  oddelec.cpp  sigatombasis.cpp  sphereInt.cpp  xcenergyinfor.cpp  xcints.cpp  xcintsinfor.cpp  xcintsoper.cpp  xcintsprops.cpp  xcvar.cpp  xcvarinfor.cpp
(+1200 files in other folders)
