#
# build the analytical integral engine for energy of eri
#
set(SRC_GINTS_ENGINE_ERI_D0
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/hgp_os_eri.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_d_d_d_d.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_d_d_d_p.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_d_d_d_s.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_d_d_d_sp.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_d_d_f_p.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_d_d_f_s.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_d_d_f_sp.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_d_d_g_s.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_d_d_p_p.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_d_d_p_s.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_d_d_p_sp.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_d_d_s_s.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_d_d_sp_s.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_d_d_sp_sp.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_d_p_d_p.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_d_p_d_s.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_d_p_d_sp.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_d_p_f_s.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_d_p_p_p.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_d_p_p_s.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_d_p_p_sp.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_d_p_s_s.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_d_p_sp_s.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_d_p_sp_sp.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_d_s_d_s.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_d_s_p_s.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_d_s_s_s.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_d_s_sp_s.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_d_sp_d_s.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_d_sp_d_sp.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_d_sp_f_s.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_d_sp_p_p.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_d_sp_p_s.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_d_sp_p_sp.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_d_sp_s_s.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_d_sp_sp_s.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_d_sp_sp_sp.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_f_d_d_d.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_f_d_d_p.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_f_d_d_s.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_f_d_d_sp.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_f_d_f_d.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_f_d_f_p.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_f_d_f_s.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_f_d_f_sp.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_f_d_g_p.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_f_d_g_s.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_f_d_p_p.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_f_d_p_s.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_f_d_p_sp.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_f_d_s_s.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_f_d_sp_s.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_f_d_sp_sp.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_f_f_d_d.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_f_f_d_p.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_f_f_d_s.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_f_f_d_sp.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_f_f_f_d.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_f_f_f_f.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_f_f_f_p.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_f_f_f_s.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_f_f_f_sp.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_f_f_g_d.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_f_f_g_p.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_f_f_g_s.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_f_f_p_p.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_f_f_p_s.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_f_f_p_sp.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_f_f_s_s.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_f_f_sp_s.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_f_f_sp_sp.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_f_p_d_p.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_f_p_d_s.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_f_p_d_sp.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_f_p_f_p.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_f_p_f_s.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_f_p_f_sp.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_f_p_g_s.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_f_p_p_p.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_f_p_p_s.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_f_p_p_sp.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_f_p_s_s.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_f_p_sp_s.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_f_p_sp_sp.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_f_s_d_s.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_f_s_f_s.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_f_s_p_p.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_f_s_p_s.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_f_s_p_sp.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_f_s_s_s.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_f_s_sp_s.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_f_s_sp_sp.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_f_sp_d_p.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_f_sp_d_s.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_f_sp_d_sp.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_f_sp_f_s.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_f_sp_f_sp.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_f_sp_p_p.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_f_sp_p_s.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_f_sp_p_sp.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_f_sp_s_s.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_f_sp_sp_s.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_f_sp_sp_sp.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_g_d_d_d.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_g_d_d_p.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_g_d_d_s.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_g_d_f_d.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_g_d_f_p.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_g_d_f_s.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_g_d_g_d.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_g_d_g_p.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_g_d_g_s.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_g_d_p_p.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_g_d_p_s.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_g_d_s_s.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_g_f_d_d.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_g_f_d_p.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_g_f_d_s.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_g_f_f_d.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_g_f_f_f.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_g_f_f_f_hrr2_1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_g_f_f_p.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_g_f_f_s.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_g_f_g_d.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_g_f_g_d_hrr2_1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_g_f_g_f.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_g_f_g_f_hrr2_1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_g_f_g_f_vrr_1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_g_f_g_p.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_g_f_g_s.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_g_f_p_p.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_g_f_p_s.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_g_f_s_s.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_g_g_d_d.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_g_g_d_p.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_g_g_d_s.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_g_g_f_d.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_g_g_f_d_hrr2_1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_g_g_f_f.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_g_g_f_f_hrr2_1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_g_g_f_f_hrr2_2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_g_g_f_f_vrr_1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_g_g_f_p.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_g_g_f_s.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_g_g_g_d.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_g_g_g_d_hrr2_1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_g_g_g_d_hrr2_2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_g_g_g_d_vrr_1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_g_g_g_f.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_g_g_g_f_hrr1_1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_g_g_g_f_hrr1_2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_g_g_g_f_hrr2_1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_g_g_g_f_hrr2_2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_g_g_g_f_vrr_1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_g_g_g_f_vrr_2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_g_g_g_g.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_g_g_g_g_hrr1_1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_g_g_g_g_hrr1_2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_g_g_g_g_hrr1_3.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_g_g_g_g_hrr2_1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_g_g_g_g_hrr2_2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_g_g_g_g_hrr2_3.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_g_g_g_g_hrr2_4.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_g_g_g_g_vrr_1.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_g_g_g_g_vrr_2.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_g_g_g_g_vrr_3.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_g_g_g_p.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_g_g_g_s.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_g_g_p_p.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_g_g_p_s.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_g_g_s_s.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_g_p_d_d.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_g_p_d_p.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_g_p_d_s.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_g_p_f_p.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_g_p_f_s.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_g_p_g_p.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_g_p_g_s.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_g_p_p_p.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_g_p_p_s.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_g_p_s_s.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_g_s_d_p.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_g_s_d_s.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_g_s_f_s.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_g_s_g_s.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_g_s_p_p.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_g_s_p_s.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_g_s_s_s.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_p_p_d_s.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_p_p_p_p.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_p_p_p_s.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_p_p_p_sp.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_p_p_s_s.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_p_p_sp_s.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_p_p_sp_sp.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_p_s_p_s.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_p_s_s_s.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_p_s_sp_s.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_p_sp_d_s.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_p_sp_p_s.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_p_sp_p_sp.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_p_sp_s_s.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_p_sp_sp_s.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_p_sp_sp_sp.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_s_s_s_s.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_sp_s_s_s.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_sp_s_sp_s.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_sp_sp_d_s.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_sp_sp_p_s.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_sp_sp_s_s.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_sp_sp_sp_s.cpp
   ${PROJECT_SOURCE_DIR}/src/gints_engine/hgp_os/energy/eri/hgp_os_eri_sp_sp_sp_sp.cpp
   )
add_library(gints_engine_eri_d0 ${SRC_GINTS_ENGINE_ERI_D0})
